# middleware/validate.js
@@ -47,7 +47,53 @@ const updatePost = async (req, res, next) => {
 }
 
 
+const createAuthor = async (req, res, next) => {
+    const validationRule = {
+        "name": "required|string",
+        "about": "required|string",
+        "favoriteTopics": "required|array",
+    };
+
+    await validator(req.body, validationRule, {}, (err, status) => {
+        if (!status) {
+            res.status(412)
+                .send({
+                    success: false,
+                    message: 'Validation failed',
+                    data: err
+                });
+        } else {
+            next();
+        }
+    }).catch( err => console.log(err))
+}
+
+const updateAuthor = async (req, res, next) => {
+    const validationRule = {
+        "name": "string",
+        "about": "string",
+        "favoriteTopics": "array",
+    };
+
+    await validator(req.body, validationRule, {}, (err, status) => {
+        if (!status) {
+            res.status(412)
+                .send({
+                    success: false,
+                    message: 'Validation failed',
+                    data: err
+                });
+        } else {
+            next();
+        }
+    }).catch( err => console.log(err))
+}
+
+
 module.exports = {
     createPost,
-    updatePost
+    updatePost,
+
+    createAuthor,
+    updateAuthor
 };
